welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
	if (estSurBiscuit()) { vuBiscuit = true; return}
                                                 ^Program:7: error: type mismatch;
 found   : Unit
 required: Boolean
		if (estSurBiscuit()) { vuBiscuit = true; return }
                                                         ^Program:10: error: type mismatch;
 found   : Unit
 required: Boolean
		droite()
                      ^